# everybody-codes

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  template.py
2024/01/: main.py  round1.txt  round2.txt  round3.txt
2024/02/: main.py  round1.txt  round2.txt  round3.txt
2024/03/: main.py  round1.txt  round2.txt  round3.txt
2024/04/: main.py
2024/05/: main.py
2024/06/: main.py
2024/07/: main.py  round1.txt  round2.txt  round3.txt
2024/08/: main.py
2024/09/: main.py
2024/11/: main.py
2024/12/: main.py
2025/01/: main.py
2025/02/: main.py
2025/03/: main.py
2025/04/: main.py
2025/05/: main.py
2025/06/: main.py
2025/07/: main.py
2025/08/: main.py
2025/09/: main.py
2025/10/: main.py
2025/11/: main.py
2025/12/: main.py
2025/13/: main.py
2025/14/: main.py
2025/15/: main.py
2025/16/: main.py
2025/17/: main.py
2025/18/: main.py
2025/19/: main.py
2025/20/: main.py
stories/1/1/: main.py
stories/1/2/: main.py
stories/1/3/: main.py
stories/2/1/: main.py
stories/2/2/: main.py
stories/2/3/: main.py
stories/3/1/: main.py
stories/3/2/: main.py
stories/3/3/: main.py
