[project]
name = "everybody-codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "everybody-codes-data",
    "networkx>=3.5",
    "pillow>=11.3.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[tool.ruff.lint.per-file-ignores]
"template.py" = ["F841"]

[tool.uv.sources]
everybody-codes-data = { git = "ssh://git@github.com/runarmod/everybody-codes-data.git", branch = "new-api" }
